# bazel-tutorial

./: MODULE.bazel  README.md  go.mod
common/: BUILD  common.go
proto/: BUILD
proto/v1/: telemetry_server.proto
server/: BUILD  main.go
