module(name = "bazel_tutorial")

bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")


# Go SDK
go = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go.download(version = "1.21.0")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Import dependencies
use_repo(
    go_deps,
    "com_github_google_uuid",
)
